fixed all exept last array

--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,14 @@
-
+/* 
 head{
 font: size 50px; 
 text-align: center;
+color: rgb(23, 197, 23);
 
 }
 body{
     color: rgb(14, 1, 1);
 }
-body nav ul li {
-    
-    display: inline-block;
-    margin-left: 200px;
-    background-color:rgba(92, 40, 40, 0.616) ;
 
-}
 header nav{
     float:right;
     width: 40%;
@@ -21,22 +16,90 @@ header nav{
     font-size: 25px;
    color:rgb(92, 41, 0);
 }
+
+
+
+/* 
+ 
+/* /* 
+header {
+    float:right;
+    width: 40%;
+    margin-top: 5px;
+    font-size: 25px;
+   color:rgb(92, 41, 0);
+}  
+
+   header nav{
+    float:right;
+    width: 25%;
+    margin-top: 5px;
+    font-size: 25px;
+   color:rgb(92, 41, 0);
+
+
+ ul {
+    list-style-image : url():}
+    li{ margin : 10px 0px 0 px 0px: }  
+ }*/
+header{
+    color: rgba(49, 14, 14, 0.925);
+    background-color:rgba(126, 126, 126, 0.568);
+    height: 50px;
+    text-align: center;
+    font-size: 20px;
+    } 
+
+
+  body nav ul li {
+    
+    display: inline-block;
+    margin-left: 150px;
+    background-color:rgba(90, 72, 72, 0.089) ;
+
+
+}
+
+main h3 p b{
+     position: fixed;
+     top: 0px;
+     left: 50px;
+     padding:10px;
+     margin: 0px;
+     width: 100%;
+     background-color: gray;
+
+ }
+
 header main ol li{
     color: rgb(92, 41, 0);
     background-color:  #a6a6a4;
     height: 20px;
     }
 
-footer{
-    height: 20px;
-    color: rgb(124, 16, 4);
-    background-color: rgba(201, 201, 201, 0.87);
-}
+ p.obj {
+     margin: 100px;
+ } 
 
- footer p{
-    font-size: 20px;
+footer p{
+    font-size: 40px;
     text-align: center;
       vertical-align: middle;
       line-height: 100px;
-      font-weight: 800;
+      font-weight: 900;
+        background-color: rgba(126, 126, 126, 0.568);
 }
+footer {
+    height: 100px;
+    color: rgba(87, 11, 4, 0.986);
+  
+}
+
+main ol li{ 
+      list-style-type:inherit;
+
+      
+
+  }
+  
+
